src/scss/_pricing-tables-checkly.scss
// core overrides

.crpt-plain {
  $side-col-width: 200px;
  margin-top: 0;
  .pt-cols {
    padding-left: $side-col-width;
  }
  .pt-cols-side {
    width: $side-col-width;
    font-size: 14px;
    font-weight: 400;

    .pt-list-block {
      padding-left: 0;
    }
  }
  .pt-block {
    font-family: $font-family-base !important;
    text-align: left;
    color: $gray-dark;
    font-size: 16px;
  }

  .pt-title {
    font-weight: normal;
    font-size: 22px;
    margin-bottom: 0;
  }

  .pt-price {
    font-weight: 200;
    margin-bottom: 7px;
  }

  @media (max-width: 1199px) {
    .pt-cols-4 .pt-list .pt-list-item .pt-value {
      font-weight: normal;
    }
  }

  .ion-checkmark-round {
    color: $green;
  }

  .ion-close-round {
    color: $gray;
  }
}

/*! Comparative Responsive Pricing Tables.3.0 - 2017-03-14 */
.crpt-plain-checkly .pt-back:before,
.crpt-plain .crpt-plain-checkly .pt-back:before {
  background-color: #fdfdfd;
}
.crpt-plain-checkly .pt-back:after,
.crpt-plain .crpt-plain-checkly .pt-back:after {
  background-color: #fff;
}
.crpt-plain-checkly .pt-title,
.crpt-plain .crpt-plain-checkly .pt-title {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-price,
.crpt-plain .crpt-plain-checkly .pt-price {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-btn,
.crpt-plain .crpt-plain-checkly .pt-btn {
  background-color: #fecd0f;
  color: #fff;
}
.crpt-plain-checkly .pt-btn:hover,
.crpt-plain .crpt-plain-checkly .pt-btn:hover,
.crpt-plain-checkly .pt-btn:focus,
.crpt-plain .crpt-plain-checkly .pt-btn:focus {
  background-color: #e8b901;
}
.crpt-plain-checkly .pt-list,
.crpt-plain .crpt-plain-checkly .pt-list {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-list-item:nth-child(odd),
.crpt-plain .crpt-plain-checkly .pt-list-item:nth-child(odd) {
  background-color: $gray-lightest;
}
.crpt-plain-checkly .pt-cols-side {
  background-color: #fff;
  outline: 1px solid #fdfdfd;
}
.crpt-plain-checkly .pt-side-text {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-list-block {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-selected .pt-back:before,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-back:before,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-back:before,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-back:before {
  background-color: #fecd0f;
  -webkit-box-shadow: 0 0 10px 1px #e6e6e6;
  box-shadow: 0 0 10px 1px #e6e6e6;
}
.crpt-plain-checkly .pt-selected .pt-back:after,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-back:after,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-back:after,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-back:after {
  background-color: #fecd0f;
}
.crpt-plain-checkly .pt-selected .pt-title,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-title,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-title,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-title {
  color: #2b2b33;
}
.crpt-plain-checkly .pt-selected .pt-price,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-price,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-price,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-price {
  color: #2b2b33;
}
.crpt-plain-checkly .pt-selected .pt-list,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-list,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-list,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-list {
  color: #2b2b33;
}
.crpt-plain-checkly .pt-selected .pt-list .pt-list-item:nth-child(odd),
.crpt-plain .crpt-plain-checkly .pt-selected .pt-list .pt-list-item:nth-child(odd),
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-list .pt-list-item:nth-child(odd),
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-list .pt-list-item:nth-child(odd) {
  background-color: #fdd63d;
}
.crpt-plain-checkly .pt-selected .pt-btn,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-btn,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-btn,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-btn {
  background-color: #d8ac05;
  color: #fff;
}
.crpt-plain-checkly .pt-selected .pt-btn:hover,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-btn:hover,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-btn:hover,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-btn:hover,
.crpt-plain-checkly .pt-selected .pt-btn:focus,
.crpt-plain .crpt-plain-checkly .pt-selected .pt-btn:focus,
.crpt-plain-checkly[class*='pt-animation-'] .pt-col .pt-block:hover .pt-btn:focus,
.crpt-plain[class*='pt-animation-'] .crpt-plain-checkly.pt-col .pt-block:hover .pt-btn:focus {
  background-color: #b59004;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-back:before,
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-back:before,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-back:before,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-back:before {
  background-color: #fdfdfd;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-back:after,
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-back:after,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-back:after,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-back:after {
  background-color: #fff;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-title,
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-title,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-title,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-title {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-price,
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-price,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-price,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-price {
  color: #fecd0f;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-list,
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-list,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-list,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-list {
  color: $gray-dark;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-list .pt-list-item:nth-child(odd),
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-list .pt-list-item:nth-child(odd),
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-list .pt-list-item:nth-child(odd),
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-list .pt-list-item:nth-child(odd) {
  background-color: $gray-lightest;
}
.crpt-plain-checkly .pt-cols .pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-btn,
.crpt-plain .pt-cols .crpt-plain-checkly.pt-col:nth-child(n) .pt-block.pt-not-available:nth-child(n) .pt-btn,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-btn,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-btn {
  color: #fff;
}
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-btn,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-btn {
  background-color: #fecd0f;
}
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-btn:hover,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-btn:hover,
.crpt-plain-checkly[class*='pt-animation-']:hover .pt-selected .pt-btn:focus,
.crpt-plain[class*='pt-animation-']:hover .crpt-plain-checkly .pt-selected .pt-btn:focus {
  background-color: #e8b901;
}
.crpt-plain-checkly .pt-tooltip .pt-tooltip-content,
.crpt-plain .crpt-plain-checkly .pt-tooltip .pt-tooltip-content {
  background-color: $gray-dark;
  border-color: $gray-dark;
  border-radius: $border-radius;
  padding: $spacer;
  @include screen-shadow();
}
.crpt-plain-checkly .pt-tooltip .pt-tooltip-content .pt-tooltip-heading,
.crpt-plain .crpt-plain-checkly .pt-tooltip .pt-tooltip-content .pt-tooltip-heading {
  border-bottom-color: $white;
}
.crpt-plain-checkly .pt-tooltip .pt-tooltip-content .pt-tooltip-center-line span:before,
.crpt-plain .crpt-plain-checkly .pt-tooltip .pt-tooltip-content .pt-tooltip-center-line span:before,
.crpt-plain-checkly .pt-tooltip .pt-tooltip-content .pt-tooltip-center-line span:after,
.crpt-plain .crpt-plain-checkly .pt-tooltip .pt-tooltip-content .pt-tooltip-center-line span:after {
  background-color: #5b4900;
}

